- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    5.15.9, 6.3.0, 6.4.1, 6.5.0 FF
- 
        
- 
        730cdc504 (dev), b83050f99 (6.5), 5c41fdfd8 (6.4), 0568b3c4d (tqtc/lts-6.2)
Behavior with mouse:
Can be closed / opened by dragging. Clicking outside the drawer does nothing. Clicking on the drawer closes the open page if open.
Behavior with touch:
Same as with mouse with the exception that if tapped outside the drawer, interaction with the drawer (e.g. tapping on the drawer) no longer does anything.
NOTE: This problem cannot be reproduced on Win 10 or with a virtual machine as far as I can tell. The problem was reproduced on Ubuntu 20.
Item {
    Rectangle {
        color: "blue"
        anchors.fill: parent
    }
    
    Button {
        text: "Open"
        onClicked: drawer.open()
    }
    Drawer {
        id: drawer
        edge: Qt.LeftEdge
        y: 50
        height : 500
        width: 500
        enabled: true
        dragMargin: 25
        modal: true
        //closePolicy: Popup.CloseOnPressOutsideParent | Popup.CloseOnPressOutside
        background: Rectangle {
            color: "black"
            opacity: 0.25
        }
        Behavior on opacity {
            NumberAnimation{ duration: 500}
        }
        Rectangle {
            color: "red"
            anchors.centerIn: parent
            visible : true
            width: 100
            height: 100
        }
        Label {
            text: "test"
            anchors.centerIn: parent
        }
        onVisibleChanged: {
            console.log("visible changed of drawer: " + visible)
        }
    }
}
- relates to
- 
                    QTBUG-103268 QML item Menu doesn't close with touch screen on CloseOnPressOutside -         
- Closed
 
-